add spring-server-generated with no implemtation
